# SYMBA

./: .gitignore  README.md  conversions.py  qed_cpp.cpp
Data_Generation/: ew_general.cpp  ew_general_working.cp  qcd_general.cpp  qcd_general_working.cp  qed_general.cpp  qed_general_working.cp
SYMBA_HEP/: README.md
SYMBA_HEP/SYMBAHEP_Sym_KAN_TP_Transformer_by_Ayush_Mishra/: LICENSE  README.md  requirements.txt  train_sym_kan_transformer.py
SYMBA_HEP/SYMBAHEP_Transformers_Abdulhakim_Alnuqaydan+Marco_Knipfer/: QCD.cpp  README.md  qed_model.cpp  train_test_split.ipynb
SYMBA_REG/: README.md
SYMBA_REG/SYMBREG_DPO+PIGP_Samyak_Jha/: ReadME.md
SYMBA_REG/SYMBREG_GP_Aryamaan_Thakur/: .gitignore  FeynmanEquationsModified.csv  README.md  main.py  requirements.txt
SYMBA_REG/SymbolicGPT_Krish_Malik/: data_cloud.py  data_clouds copy.json  decoder.py  feynman_parse_trees_7 copy.json  learned_library.py  masking&decoider_setup.py  symbolic_parser.py  t_net_embeddings.py  tnet_embeddings copy.json  (+1 more)
Symba_Samyak Jha/: DPO_Training.ipynb  GP+Beam_search.ipynb  ReadME.md  Transformer_train(E2E).ipynb  gsoc-data_preparation.ipynb  mcts+gp.ipynb
Symba_Samyak Jha/PIGP/: gp.py  (+2 more)
aryamaan/: FeynmanEquationsModified.csv  README.md  metrics.py  prepare_dataset.py
data-generation-marty/QED/: CMakeLists.txt  QED_AllParticles_IO.cpp  QED_loop_insertions.py  QED_loop_insertions_parallel.py
data-generation-marty/QED/dev/: OffShell.py  loop_dev.py  string_split.cpp
data-generation-marty/QED/tests/: test_OffShell_cpp.sh  tests.sh
models/: BaseModel.ipynb
sympy-prefix/: README.md
(+157 files in other folders)
